Release v0.3.0: Further UI/UX Enhancements, Dependency Updates, and Bug Fixes
This commit includes several UI and UX improvements, dependency updates, and bug fixes across various sections of the extension:

- **Settings - User Profile:**
    - **Fix:** In the 'Offline Profile' submenu, usernames are now truncated to fit the available space using a more precise calculation, and a tooltip with the full username is displayed on hover. Added `word-wrap: break-word` style to the tooltip for better readability of long names.
- **Settings - User Profile List:**
    - **Fix:** Updated the SVG style of the delete button in the profile list to use the 'Danger' button color for the stroke.
- **Documentation - TERMS_OF_USE.md:**
    - **Update:** Corrected and updated links for dependency libraries: jQuery (added GitHub link), Toastify (fixed link), JavaScript Color Gradient (fixed link), removed mention of WebFont, Coloris (fixed link), GreenSock Animation Platform (GSAP) (added GitHub link).
    - **Add:** Included information about the 'particles.js' library.
    - **Update:** Clarified the usage of 'confetti' library from 'tsparticles'.
- **Utility Functions:**
    - **Add:** Implemented a new `unescapeHtml` function in 'utilityFunctions.js' and imported it into 'bookmarkManager.js'. This function is used to convert HTML entities back to their corresponding characters in the Bookmark Manager UI input fields, ensuring titles are displayed as intended.
- **Settings - Export Profile:**
    - **Fix:** Improved the visibility of input fields for file name, export type, password, and the progress bar by updating their background colors.
- **Interactive Guide UI:**
    - **Fix:** Ensured that the background color and font styles from the user's settings are applied to the guide UI.
    - **Fix:** Applied font styles from the user's settings to the guide buttons.
    - **Fix:** Prevented accidental closure of the context menu on left mouse click during guide steps.
    - **Fix:**

--- a/css/style.css
+++ b/css/style.css
@@ -60,7 +60,7 @@
     display: none;
 }
 
-* svg {
+* svg, canvas {
     pointer-events: none;
 }
 
@@ -293,8 +293,6 @@ body>#profileMenu {
     position: fixed;
     right: 0px;
     top: 0px;
-    width: 50px;
-    height: 50px;
     z-index: 20;
     background-color: #00000000;
 }
@@ -316,7 +314,7 @@ body>#profileMenu>#profileMenuHeader {
     justify-content: flex-start;
     align-items: center;
     width: 100%;
-    height: 60px;
+    height: 50px;
     background-color: #00000000;
     overflow: hidden;
 }
@@ -325,7 +323,7 @@ body>#profileMenu>#profileMenuHeader>#profileUserName {
     display: flex;
     justify-content: flex-start;
     align-items: center;
-    width: 140px;
+    width: auto;
     white-space: nowrap;
     height: auto;
     left: 0;
@@ -343,9 +341,11 @@ body>#profileMenu>#profileMenuBody {
     justify-content: flex-start;
     align-items: flex-start;
     flex-direction: column;
+    padding: 0px 5px 0px 5px;
     width: 100%;
-    height: calc(100% - 60px);
+    height: auto;
     background-color: #00000000;
+    overflow: hidden;
 }
 
 body>#profileMenu>#profileMenuBody .profileMenuItem {
@@ -354,10 +354,12 @@ body>#profileMenu>#profileMenuBody .profileMenuItem {
     align-items: center;
     right: -10%;
     width: 100%;
-    height: 30px;
+    height: 24px;
     margin-bottom: 4px;
+    padding: 0px 0px 0px 2px;
     opacity: 0;
     border: none;
+    border-radius: 5px;
     background-color: #00000000;
 }
 
@@ -369,8 +371,8 @@ body>#profileMenu>#profileMenuBody .profileMenuItem>.profileMenuItemIcon {
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 30px;
-    height: 30px;
+    width: 24px;
+    height: 24px;
 }
 
 body>#contextMenu {
@@ -1925,7 +1927,7 @@ body>#uiElementsContainer>#settingsWindow>#settingsWindowLeftSection>#leftMenuBo
     justify-content: flex-start;
     align-items: flex-start;
     flex-direction: column;
-    margin: 4px 0px 0px 0px;
+    margin: 4px 0px 4px 0px;
     width: 100%;
     height: auto;
 }
@@ -2037,7 +2039,7 @@ body>#uiElementsContainer>#settingsWindow>#settingsWindowRightSection>#editProfi
     height: 100%;
 }
 
-body>#uiElementsContainer>#settingsWindow>#settingsWindowRightSection>#editProfileSection>#headerProfileSection>#profileName>#userName {
+body>#uiElementsContainer>#settingsWindow>#settingsWindowRightSection>#editProfileSection>#headerProfileSection>#profileName>#userNameOfflineProfile {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -5493,6 +5495,7 @@ body>#uiElementsContainer>#settingsWindow>#settingsWindowRightSection>#exportPro
     height: 60px;
     margin: 0px 10px 10px 0px;
     padding: 0px 0px 0px 5px;
+    border-radius: 5px;
     background-color: #00000000;
 }
 
